objects/Budget_Allocation__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>IF( Budget_Line__c == null, 
  Budget_Allocation__r.Budget_Line__r.Account_Name__c,
  Budget_Line__r.Account_Name__c
)</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <formula>IF( Budget_Line__c == null, 
  Budget_Allocation__r.Budget_Line__r.Account_Number__c,
  Budget_Line__r.Account_Number__c
)</formula>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allocation_Amount__c</fullName>
        <label>Allocation Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Allocation_Date__c</fullName>
        <description>The specific allocation date for this allocation.</description>
        <label>Allocation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Allocation_Quarter__c</fullName>
        <formula>&quot;Q&quot; &amp; TEXT( CEILING(Month( Allocation_Date__c ) / 3) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Allocation Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Category__c</fullName>
        <formula>Budget_Line__r.Asset_Category__c</formula>
        <label>Asset Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_Allocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Budget Allocation to which this payment should be applied</inlineHelpText>
        <label>Budget Allocation</label>
        <referenceTo>Budget_Allocation__c</referenceTo>
        <relationshipLabel>Budget Allocation Payments</relationshipLabel>
        <relationshipName>Budget_Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Budget_Approver__c</fullName>
        <formula>Payment_Request__r.Department_Head__r.FirstName + &quot; &quot; + Payment_Request__r.Department_Head__r.LastName</formula>
        <label>Budget Approver</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_Item__c</fullName>
        <label>Budget Item</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_Line_Formula__c</fullName>
        <description>Displayed on Budget Request Payment Allocation page.  Looks up the related Purchase Request Budget Allocation&apos;s Budget Line.</description>
        <formula>IF( Budget_Allocation__c != null, HYPERLINK(&quot;/&quot; &amp;  Budget_Allocation__r.Budget_Line__r.Id , Budget_Allocation__r.Budget_Line__r.Name), HYPERLINK(&quot;/&quot; &amp;  Budget_Line__r.Id , Budget_Line__r.Name) )</formula>
        <label>Budget</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_Line__c</fullName>
        <label>Budget</label>
        <referenceTo>Budget__c</referenceTo>
        <relationshipLabel>Budget Allocations</relationshipLabel>
        <relationshipName>Budget_Allocations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Budget_Manager__c</fullName>
        <formula>Budget_Line__r.Department__r.Budget_Manager__r.FirstName + &apos; &apos; +  Budget_Line__r.Department__r.Budget_Manager__r.LastName</formula>
        <inlineHelpText>Budget Manager from related Budget&apos;s Department</inlineHelpText>
        <label>Budget Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CapEx__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CapEx?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Department_Code__c</fullName>
        <label>Department Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_Name__c</fullName>
        <formula>IF( Budget_Line__c == null, 
  Budget_Allocation__r.Budget_Line__r.Department__r.Name,
  Budget_Line__r.Department__r.Name
)</formula>
        <label>Department Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_Number__c</fullName>
        <formula>IF( Budget_Line__c == null, 
  Budget_Allocation__r.Budget_Line__r.Department__r.Department_Number__c,
  Budget_Line__r.Department__r.Department_Number__c
)</formula>
        <label>Department Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fixed_Asset__c</fullName>
        <formula>IF( Budget_Line__c == null, 
  Budget_Allocation__r.Budget_Line__r.Fixed_Asset__c,
  Budget_Line__r.Fixed_Asset__c
)</formula>
        <label>Fixed Asset</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Service_Month__c</fullName>
        <description>CapEx Data field</description>
        <label>In Service Month</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting__c</fullName>
        <label>Meeting</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <inlineHelpText>An amount of the Payment Request that is to be applied to the related Purchase Request Budget Allocation.</inlineHelpText>
        <label>Payment Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <inlineHelpText>Date when the payment is to be applied.  This determines which quarter will be affected by the payment</inlineHelpText>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Quarter__c</fullName>
        <description>Quarter of the year that the payment date occurred in.</description>
        <formula>&quot;Q&quot; &amp; TEXT( CEILING(Month( Payment_Date__c ) / 3) )</formula>
        <label>Payment Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Request</label>
        <referenceTo>Payment_Request__c</referenceTo>
        <relationshipLabel>Budget Allocation Payments</relationshipLabel>
        <relationshipName>Budget_Allocation_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Percent_Q1_Allocation_Paid__c</fullName>
        <formula>IF( Q1_Allocation__c != 0, Q1_Payments__c /  Q1_Allocation__c , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Ratio of the Allocated amount paid</inlineHelpText>
        <label>Percent Q1 Allocation Paid</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_Q2_Allocation_Paid__c</fullName>
        <formula>IF( Q2_Allocation__c != 0, Q2_Payments__c /  Q2_Allocation__c , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Ratio of the Allocated amount paid</inlineHelpText>
        <label>Percent Q2 Allocation Paid</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_Q3_Allocation_Paid__c</fullName>
        <formula>IF( Q3_Allocation__c != 0, Q3_Payments__c /  Q3_Allocation__c , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Ratio of the Allocated amount paid</inlineHelpText>
        <label>Percent Q3 Allocation Paid</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Purchase_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Request</label>
        <referenceTo>Purchase_Request__c</referenceTo>
        <relationshipLabel>Purchase Request Budget Allocations</relationshipLabel>
        <relationshipName>Purchase_Request_Budget_Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Q1_Allocation__c</fullName>
        <inlineHelpText>Amount set aside Q1 toward this purchase request</inlineHelpText>
        <label>Q1 Allocation</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q1_Payments__c</fullName>
        <inlineHelpText>Sum of payments made toward the Allocation amount for the related Budget Line</inlineHelpText>
        <label>Q1 Payments</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Q1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Q2_Allocation__c</fullName>
        <inlineHelpText>Amount set aside Q2 toward this purchase request</inlineHelpText>
        <label>Q2 Allocation</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q2_Payments__c</fullName>
        <inlineHelpText>Sum of payments made toward the Allocation amount for the related Budget Line</inlineHelpText>
        <label>Q2 Payments</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Q2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Q3_Allocation__c</fullName>
        <inlineHelpText>Amount set aside Q3 toward this purchase request</inlineHelpText>
        <label>Q3 Allocation</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q3_Payments__c</fullName>
        <inlineHelpText>Sum of payments made toward the Allocation amount for the related Budget Line</inlineHelpText>
        <label>Q3 Payments</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Q3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <inlineHelpText>Used to calculate the number of Allocation Line Items by taking the difference between Start Date and Term End Date.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Term_End_Date__c</fullName>
        <formula>Purchase_Request__r.Term_End_Date__c</formula>
        <label>Term End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Budget Allocation</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budget Allocations</pluralLabel>
    <recordTypes>
        <fullName>Budget_Allocation_Payment</fullName>
        <active>true</active>
        <description>A payment made toward a budgeted allocation of funds (usually on a Purchase Request)</description>
        <label>Budget Allocation Payment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Purchase_Request_Budget_Allocation</fullName>
        <active>true</active>
        <description>An amount allocated to a Purchase Request from a specific budget line item</description>
        <label>Purchase Request Budget Allocation</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Allocation_must_be_within_3_Years</fullName>
        <active>true</active>
        <description>The Budget Allocation must fall within a 3 year window.</description>
        <errorConditionFormula>(End_Date__c - Start_Date__c ) &gt; 1095</errorConditionFormula>
        <errorMessage>The Contract must be within a 3 year window to be included in a Budget Alllocation. Please modify your Start Date or End Date.</errorMessage>
    </validationRules>
</CustomObject>